<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_vertical"
    android:background="@drawable/background3_alpha"
    android:orientation="vertical"
    android:scrollbars="vertical|horizontal"
    tools:context=".HelpActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|center_vertical"
        android:padding="0dp"
        android:paddingBottom="0dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#efefef"
            android:padding="10dp"
            android:text="@string/help_activity_caption"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#333333" />
            
    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp">
  
                <TableRow
                    android:id="@+id/tableRow0"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="#FFFFFF"
                    android:padding="10dp" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/__www__"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#990000" />
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_www_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />

            </TableRow>
           
            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/__primo__"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#990000" />
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_primo_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/__news__"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#990000" />
                
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_news_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/__seats__"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#990000" />
                
            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_free_seats_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/__config__"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#990000" />
                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >
                
                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_config_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >
                
                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="10dp"
                    android:paddingRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333"
                    android:singleLine="false"
                    android:text="@string/help_activity_label_config_description_cache" />

            </TableRow>
            
            <TableRow
                android:id="@+id/tableRow11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="1dp"
                    android:inputType="textMultiLine"
                    android:paddingRight="20dp"
                    android:text="@string/help_activity_label_config_description_news"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333" />
                
                <!--   View android:layout_width="fill_parent" android:layout_height="1dp" android:background="@android:color/transparent" / -->

                
            </TableRow>

            <TableRow
                android:id="@+id/tableRow12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:alpha="0.7"
                android:background="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="1dp"
                    android:inputType="textMultiLine"
                    android:paddingRight="20dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#333333"
                    android:text="@string/help_activity_label_config_description_startup" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Small Text"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />

            </TableRow>
            

 
            
        </TableLayout>
        
    </ScrollView>

</LinearLayout>
